# dask-modelling-example

./: .gitignore  A_data_import.py  Ab_data_loader.py  B_forecast_activity.py  Bb_forecast_base.py  CHANGELOG.md  C_business_transform.py  Cb_business_transform_base.py  Healthcare system model.ipynb  Healthcare system model.py  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
Import_data/: acute_hospital_activity.csv  assumptions.csv  community_activity.csv  population_growth.csv
dask_modelling_example/: A_data_import.py  Ab_data_loader.py  B_forecast_activity.py  Bb_forecast_base.py  C_business_transform.py  Cb_business_transform_base.py  __init__.py
tests/: test_A_data_import.py
